--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -58,6 +58,13 @@ font-size = 15
 mouse-hide-while-typing = true
 cursor-style-blink = false
 cursor-style = bar
+
 keybind = ctrl+shift+p=toggle_tab_overview
 keybind = ctrl+shift+r=reload_config
 keybind = ctrl+shift+x=close_surface
+
+# Navigate window splits
+keybind = cmd+shift+h=goto_split:left
+keybind = cmd+shift+j=goto_split:bottom
+keybind = cmd+shift+k=goto_split:top
+keybind = cmd+shift+l=goto_split:right
