more chrome GPU acceleration, I hope

--- a/.config/chrome-flags.conf
+++ b/.config/chrome-flags.conf
@@ -1,4 +1,5 @@
 --ozone-platform=wayland
---enable-features=AcceleratedVideoDecodeLinuxGL,TouchpadOverscrollHistoryNavigation,AcceleratedVideoEncoder,VaapiVideoDecoder
+--ignore-gpu-blocklist
+--enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation,AcceleratedVideoEncoder,VaapiVideoDecoder
 --disable-features=GlobalShortcutsPortal
-
+--enable-zero-copy
