--- a/.config/cava/config
+++ b/.config/cava/config
@@ -241,7 +241,7 @@
 # ; gradient_color_7 = '#cc5933'
 # ; gradient_color_8 = '#cc3333'
 
-# background = '#1e1e2e'
+background = '#1e1e2e'
 
 gradient = 1
 
