new mpv settings for 4k, for my xps13

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,5 +1,9 @@
-profile=high-quality
+# profile=high-quality
 hwdec=auto
-# vo=gpu
+# vo=gpu-next
+# gpu-api=vulkan
+# hwdec=vulkan
+# gpu-context=waylandvk
 cache=yes
 slang=en
+save-position-on-quit=yes
