add sub option to mpv

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -7,3 +7,10 @@ hwdec=auto
 cache=yes
 slang=en
 save-position-on-quit=yes
+
+
+################################################################################
+# Subtitles
+################################################################################
+# Move subtitles further down
+# sub-pos=110
