--- a/.config/chrome-flags.conf
+++ b/.config/chrome-flags.conf
@@ -1,5 +1,6 @@
 --ozone-platform=wayland
 --ignore-gpu-blocklist
---enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation,AcceleratedVideoEncoder,VaapiVideoDecoder
+--enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation,AcceleratedVideoEncoder,VaapiVideoDecoder,VaapiVideoEncoder
 --disable-features=GlobalShortcutsPortal
 --enable-zero-copy
+--enable-gpu-rasterization
