--- a/.config/chrome-flags.conf
+++ b/.config/chrome-flags.conf
@@ -1,6 +1,4 @@
---ozone-platform=wayland
---ignore-gpu-blocklist
---enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation,AcceleratedVideoEncoder,VaapiVideoDecoder,VaapiVideoEncoder
---disable-features=GlobalShortcutsPortal
---enable-zero-copy
+--ozone-platform-hint=auto
+--enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL,AcceleratedVideoEncoder,TouchpadOverscrollHistoryNavigation
 --enable-gpu-rasterization
+--disable-features=GlobalShortcutsPortal
