--- a/.config/chrome-flags.conf
+++ b/.config/chrome-flags.conf
@@ -1,4 +1,4 @@
 --ozone-platform-hint=auto
---enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL,AcceleratedVideoEncoder,TouchpadOverscrollHistoryNavigation
+--enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL,AcceleratedVideoEncoder,TouchpadOverscrollHistoryNavigation,WaylandWindowDecorations
 --enable-gpu-rasterization
 --disable-features=GlobalShortcutsPortal
