cleaning up the chrome flags. Vulkan still has too many bugs. Staying with OpenGL

--- a/.config/chrome-flags.conf
+++ b/.config/chrome-flags.conf
@@ -1,4 +1,1 @@
---ozone-platform-hint=auto
---enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL,AcceleratedVideoEncoder,TouchpadOverscrollHistoryNavigation,WaylandWindowDecorations
---enable-gpu-rasterization
---disable-features=GlobalShortcutsPortal
+--enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoEncoder,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation,WaylandWindowDecorations
