--- a/.config/chrome-flags.conf
+++ b/.config/chrome-flags.conf
@@ -1,1 +1,1 @@
---enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoEncoder,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation,WaylandWindowDecorations
+--enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoEncoder,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation
