adjusted mpv further

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,23 +1,33 @@
-# profile=high-quality
+profile=high-quality
+video-sync=display-resample   # decouples UI refresh rate from video FPS
+
 hwdec=auto
+# hwdec=auto-safe
+# hwdec=vulkan
+
 # vo=gpu-next
 # gpu-api=vulkan
-# hwdec=vulkan
 # gpu-context=waylandvk
-cache=yes
-slang=en
-save-position-on-quit=yes
 
+cache=yes
+demuxer-max-bytes=512MiB
+demuxer-readahead-secs=20
+
+slang=en
+
+save-position-on-quit=yes
 
 ################################################################################
 # Subtitles
 ################################################################################
 # Move subtitles further down
-# sub-pos=110
+sub-pos=110
 
 ################################################################################
 # uosc
 ################################################################################
+
+osc=no        # don’t load the built-in controller
 
 # uosc provides seeking & volume indicators (via flash-timeline and flash-volume commands)
 # if you decide to use them, you don't need osd-bar
@@ -25,3 +35,4 @@ osd-bar=no
 
 # uosc will draw its own window controls and border if you disable window border
 border=no
+
