--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,9 +1,11 @@
-profile=high-quality
-video-sync=display-resample   # decouples UI refresh rate from video FPS
+# Generally the default settings are quite good
+
+# profile=high-quality # I do not see the difference, but it takes lot's of GPU power.
+# video-sync=display-resample   # decouples UI refresh rate from video FPS, smoother UI, but costs a little CPU/GPU
 
 hwdec=auto
 # hwdec=auto-safe
-# hwdec=vulkan
+# hwdec=vulkan # buggy and breaks mpv with my setup
 
 # vo=gpu-next
 # gpu-api=vulkan
@@ -17,17 +19,26 @@ slang=en
 
 save-position-on-quit=yes
 
+# use sRGB EOTF instead of BT.1886
+# target-trc=srgb
+# (optional) pull mids back up a hair if it still feels dark
+# gamma-factor=1.10
+
+# video-output-levels=limited        # forces TV-range 16-235 instead of 0-255. Create brighter images. Usually too bright!
+# icc-profile-auto
+
 ################################################################################
 # Subtitles
 ################################################################################
 # Move subtitles further down
-sub-pos=110
+# sub-pos=110
+# blend-subtitles=yes
 
 ################################################################################
 # uosc
 ################################################################################
 
-osc=no        # don’t load the built-in controller
+#osc=no        # don’t load the built-in controller
 
 # uosc provides seeking & volume indicators (via flash-timeline and flash-volume commands)
 # if you decide to use them, you don't need osd-bar
