reverted vscode flags

--- a/.config/chrome-flags.conf
+++ b/.config/chrome-flags.conf
@@ -1,1 +1,2 @@
 --enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoEncoder,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation
+# --enable-unsafe-webgpu
