--- a/.config/code-flags.conf
+++ b/.config/code-flags.conf
@@ -1,4 +1,4 @@
 --ozone-platform=wayland
---use-angle=vulkan 
---enable-unsafe-webgpu 
---enable-features=Vulkan,DefaultANGLEVulkan,WebGPUServiceInProcess
+# --use-angle=vulkan 
+# --enable-unsafe-webgpu 
+# --enable-features=Vulkan,DefaultANGLEVulkan,WebGPUServiceInProcess,UseSkiaRenderer
