tried more mpv settings

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -7,9 +7,11 @@ hwdec=auto
 # hwdec=auto-safe
 # hwdec=vulkan # buggy and breaks mpv with my setup
 
-# vo=gpu-next
+# vo=gpu-next    # gpu-next is a bit brighter.
 # gpu-api=vulkan
 # gpu-context=waylandvk
+
+# icc-profile-auto   
 
 cache=yes
 demuxer-max-bytes=512MiB
