--- a/.config/chrome-flags.conf
+++ b/.config/chrome-flags.conf
@@ -1,3 +1,3 @@
 --enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoEncoder,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation
-
+--disable-features=GlobalShortcutsPortal
 
