add helix alias

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -13,6 +13,10 @@ hwdec=auto
 
 # icc-profile-auto   
 
+# Arch Wiki recommendations
+video-sync=display-resample
+interpolation
+
 cache=yes
 demuxer-max-bytes=512MiB
 demuxer-readahead-secs=20
@@ -35,6 +39,8 @@ save-position-on-quit=yes
 # Move subtitles further down
 # sub-pos=110
 # blend-subtitles=yes
+# sub-auto=fuzzy
+# sub-bold=yes
 
 ################################################################################
 # uosc
