adjusted mpv again. Again back to almost default settings

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -14,8 +14,8 @@ hwdec=auto
 # icc-profile-auto   
 
 # Arch Wiki recommendations
-video-sync=display-resample
-interpolation
+# video-sync=display-resample
+# interpolation # needs lot's of GPU power
 
 cache=yes
 demuxer-max-bytes=512MiB
