remove depricated chrome flags and removed HW encoding, for being unstable

--- a/.config/chrome-flags.conf
+++ b/.config/chrome-flags.conf
@@ -1,3 +1,5 @@
---enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoEncoder,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation
---disable-features=GlobalShortcutsPortal
+--enable-features=TouchpadOverscrollHistoryNavigation
+# ENABLE ENCODE - UNSTABLE!: 
+# --enable-features=AcceleratedVideoEncoder,TouchpadOverscrollHistoryNavigation
 
+# OUTDATED Chrome 142: --enable-features=AcceleratedVideoEncoder,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation
