adjusted chrome flags for chrome v142

--- a/.config/chrome-flags.conf
+++ b/.config/chrome-flags.conf
@@ -1,5 +1,7 @@
 --enable-features=TouchpadOverscrollHistoryNavigation
-# ENABLE ENCODE - UNSTABLE!: 
+# ENABLE HW ENCODE - UNSTABLE!?: 
 # --enable-features=AcceleratedVideoEncoder,TouchpadOverscrollHistoryNavigation
 
-# OUTDATED Chrome 142: --enable-features=AcceleratedVideoEncoder,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation
+# OUTDATED Chrome 142: 
+# --enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoEncoder,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation
+# --disable-features=GlobalShortcutsPortal
