enable horizontal-window-padding with ghostty

--- a/.config/chrome-flags.conf
+++ b/.config/chrome-flags.conf
@@ -1,7 +1,7 @@
 --enable-features=TouchpadOverscrollHistoryNavigation
 # ENABLE HW ENCODE - UNSTABLE!?: 
-# --enable-features=AcceleratedVideoEncoder,TouchpadOverscrollHistoryNavigation
+# --enable-features=AcceleratedVideoEncoder
 
-# OUTDATED Chrome 142: 
-# --enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoEncoder,AcceleratedVideoDecodeLinuxZeroCopyGL,TouchpadOverscrollHistoryNavigation
+# OUTDATED since Chrome 142: 
+# --enable-features=AcceleratedVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL
 # --disable-features=GlobalShortcutsPortal
