--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -30,7 +30,7 @@ mouse-hide-while-typing = true
 
 # this one is for nvim:
 window-padding-balance = true
-# window-padding-x = 2
+window-padding-x = 3
 # window-padding-y = 0
 
 keybind = f12=toggle_tab_overview
