add screensafer zsh script

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -46,12 +46,16 @@ save-position-on-quit=yes
 # uosc
 ################################################################################
 
-#osc=no        # don’t load the built-in controller
+# for ModernX:
+# osc=no        # don’t load the built-in controller
 
+# For uosc:
 # uosc provides seeking & volume indicators (via flash-timeline and flash-volume commands)
 # if you decide to use them, you don't need osd-bar
 osd-bar=no
 
+
+# For ModernX && for uosc:
 # uosc will draw its own window controls and border if you disable window border
 border=no
 
