clean up mpv configuration by removing unused GPU settings and retaining subtitle blending

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -5,17 +5,6 @@
 
 hwdec=auto
 # hwdec=auto-safe
-# hwdec=vulkan # buggy and breaks mpv with my setup
-
-# vo=gpu-next    # gpu-next is a bit brighter.
-# gpu-api=vulkan
-# gpu-context=waylandvk
-
-# icc-profile-auto   
-
-# Arch Wiki recommendations
-# video-sync=display-resample
-# interpolation # needs lot's of GPU power
 
 cache=yes
 demuxer-max-bytes=512MiB
@@ -25,20 +14,12 @@ slang=en
 
 save-position-on-quit=yes
 
-# use sRGB EOTF instead of BT.1886
-# target-trc=srgb
-# (optional) pull mids back up a hair if it still feels dark
-# gamma-factor=1.10
-
-# video-output-levels=limited        # forces TV-range 16-235 instead of 0-255. Create brighter images. Usually too bright!
-# icc-profile-auto
-
 ################################################################################
 # Subtitles
 ################################################################################
 # Move subtitles further down
 # sub-pos=110
-# blend-subtitles=yes
+blend-subtitles=yes
 # sub-auto=fuzzy
 # sub-bold=yes
 
