refactor mpv configuration: enhance organization and clarity of sections

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,8 +1,13 @@
 # Generally the default settings are quite good
 
+
+# ──────────────────────────────────────────────────────────────────────
+# Video - https://mpv.io/manual/stable/#video
+# ──────────────────────────────────────────────────────────────────────
+
 # profile=high-quality # I do not see the difference, but it takes lot's of GPU power.
 # video-sync=display-resample   # decouples UI refresh rate from video FPS, smoother UI, but costs a little CPU/GPU
-
+# [GPU decoding]
 hwdec=auto
 # hwdec=auto-safe
 
@@ -10,33 +15,37 @@ cache=yes
 demuxer-max-bytes=512MiB
 demuxer-readahead-secs=20
 
-slang=en
+# ──────────────────────────────────────────────────────────────────────
+# Audio - https://mpv.io/manual/stable/#audio
+# ──────────────────────────────────────────────────────────────────────
+slang=eng,en
 
+# ──────────────────────────────────────────────────────────────────────
+# Watch Later - https://mpv.io/manual/master/#watch-later
+# ──────────────────────────────────────────────────────────────────────
 save-position-on-quit=yes
 
-################################################################################
-# Subtitles
-################################################################################
-# Move subtitles further down
-# sub-pos=110
+# ──────────────────────────────────────────────────────────────────────
+# Subtitles - https://mpv.io/manual/stable/#subtitles
+# ──────────────────────────────────────────────────────────────────────
+sub-auto=fuzzy 	        # external subs don't have to match the file name to autoload (use fuzzy otherwise)
+# sub-pos=110             # Move subtitles further down
 blend-subtitles=yes
-# sub-auto=fuzzy
 # sub-bold=yes
+sub-use-margins=no			# whether subtitles can go in black bars areas
+# sub-font-size=32			# subtitle size, use instead of sub-scale to avoid breaking some subtitles
 
-################################################################################
-# uosc
-################################################################################
+# ──────────────────────────────────────────────────────────────────────
+# Interface - https://mpv.io/manual/stable/#osd
+# ──────────────────────────────────────────────────────────────────────
 
-# for ModernX:
-# osc=no        # don’t load the built-in controller
+# for ModernX:  # don’t load the built-in controller
+# osc=no       
+
+# For uosc & ModernX: # removes the default bar when scrubbing or changing volume
+osd-bar=no 
 
 # For uosc:
-# uosc provides seeking & volume indicators (via flash-timeline and flash-volume commands)
-# if you decide to use them, you don't need osd-bar
-osd-bar=no
-
-
-# For ModernX && for uosc:
 # uosc will draw its own window controls and border if you disable window border
 border=no
 
