--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -5,11 +5,12 @@
 # Video - https://mpv.io/manual/stable/#video
 # ──────────────────────────────────────────────────────────────────────
 
-# profile=high-quality # I do not see the difference, but it takes lot's of GPU power.
-# video-sync=display-resample   # decouples UI refresh rate from video FPS, smoother UI, but costs a little CPU/GPU
 # [GPU decoding]
 hwdec=auto
 # hwdec=auto-safe
+
+# profile=high-quality # I do not see the difference, but it takes lot's of GPU power.
+# profile=fast # IF GPU at it's limit
 
 cache=yes
 demuxer-max-bytes=512MiB
@@ -40,12 +41,30 @@ sub-use-margins=no			# whether subtitles can go in black bars areas
 # ──────────────────────────────────────────────────────────────────────
 
 # for ModernX:  # don’t load the built-in controller
-# osc=no       
+osc=no       
 
-# For uosc & ModernX: # removes the default bar when scrubbing or changing volume
+# For uosc: # removes the default bar when scrubbing or changing volume
 osd-bar=no 
 
-# For uosc:
+# For uosc & ModernX:
 # uosc will draw its own window controls and border if you disable window border
 border=no
 
+# video-sync=display-resample   # decouples UI refresh rate from video FPS, smoother UI, but costs a little CPU/GPU
+
+# ──────────────────────────────────────────────────────────────────────
+# Keybinds
+# ──────────────────────────────────────────────────────────────────────
+
+# Subitles
+# Up: r
+# Down: R
+# Bigger: G
+# Smaller: F
+# On\Off: v
+
+
+# Contrast
+# 1, 2
+# Brigthness
+# 3, 4
